fixed scrollbars on chrome

--- a/web_frontend/assets/scss/_nullstyle.scss
+++ b/web_frontend/assets/scss/_nullstyle.scss
@@ -79,3 +79,19 @@ img {
 button {
   outline: none;
 }
+
+::-webkit-scrollbar {
+  height: 12px;
+  width: 6px;
+  background: rgba(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb {
+  background: $cl-ftext;
+  -webkit-border-radius: 1ex;
+  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
+::-webkit-scrollbar-corner {
+  background: rgba(0, 0, 0, 0);
+}
